--- a/app/public/css/sign_in_and_reg.css
+++ b/app/public/css/sign_in_and_reg.css
@@ -5,7 +5,7 @@ em,i{font-style: normal;}
 
 .bg {
   background-size: 100% 100%;
-  background-image: url(bg1.jpg);
+  background-image: url(../img/bg1.jpg);
   background-repeat: no-repeat;
   position: absolute;
   overflow: hidden;
@@ -75,6 +75,18 @@ input:-webkit-autofill {
   padding: 30px;
 }
 
+.reg_table {
+  width: 300px;
+  height: 420px;
+  border-radius: 10px;
+  background-color: rgba(242,236,224,0.7);
+  position: absolute;
+  top: 295px;
+  left: 300%;
+  box-shadow: 0px 0px 10px 2px #666;
+  padding: 30px;
+}
+
 .welcome_title {
   color: #017446;
   margin-top: 9px;
@@ -88,7 +100,7 @@ input:-webkit-autofill {
   position: absolute;
   top: 56px;
   left: 131px;
-  background: url(logo.png) no-repeat;
+  background: url(../img/logo.png) no-repeat;
 }
 
 .login_btn,.reg_btn {
@@ -122,6 +134,10 @@ input:-webkit-autofill {
   top: 417px;
 }
 
+.login_sbtn {
+  background: #ff3131;
+}
+
 .pull_right {
   float: right; 
 }
@@ -141,7 +157,7 @@ input:-webkit-autofill {
 }
 
 .check_box input[type="checkbox"]:checked +i {
-  background-image: url(check_box.png);
+  background-image: url(../img/check_box.png);
   background-size: 100% 100%;
 }
 
@@ -171,13 +187,13 @@ input:-webkit-autofill {
   position: absolute;
   top: 326px;
   display: inline-block;
-  background: url(apay.png) no-repeat;
+  background: url(../img/apay.png) no-repeat;
   background-size: 30px;
   margin-left:164px;
 }
 
 .wpay {
-  background-image: url(wpay.png);
+  background-image: url(../img/wpay.png);
   position: absolute;
   top: 326px;
   margin-left:114px;
@@ -206,3 +222,8 @@ input:-webkit-autofill {
   height:30px;
   background-size:30px;
 }
+
+.reg_table {
+  display: none;
+}
+
