--- a/app/public/css/sign_in_and_reg.css
+++ b/app/public/css/sign_in_and_reg.css
@@ -68,12 +68,12 @@ input:-webkit-autofill {
   border-radius: 10px;
   background-color: rgba(242,236,224,0.7);
   position: relative;
-  top: 234px;
+  top: 219px;
   left: 300%;
   box-shadow: 0px 0px 10px 2px #666;
   /* text-align: center; */
   padding: 30px;
-  display:none;
+  /* display:none; */
 }
 
 .reg_table {
@@ -81,12 +81,12 @@ input:-webkit-autofill {
   height: 512px;
   border-radius: 10px;
   background-color: rgba(242,236,224,0.7);
-  position: relative;
+  position: absolute;
   top: 234px;
   left: 300%;
   box-shadow: 0px 0px 10px 2px #666;
   padding: 10px 30px 30px 30px;
-  
+  /* display:none; */
 }
 
 
@@ -175,7 +175,7 @@ input:-webkit-autofill {
   font-size: 15px;
 }
 
-.input_table,.reg_table hr {
+.input_table hr,.reg_table hr {
   background-color:#017446;
   width:60%;
   margin: 0 auto;
@@ -209,6 +209,16 @@ input:-webkit-autofill {
   position: absolute;
   top: 326px;
   margin-left:114px;
+}
+
+.apay.rapay {
+  top: 500px;
+  margin-left:258px;
+}
+
+.wpay.rwpay {
+  top: 500px;
+  margin-left:198px;
 }
 
 .apay:hover {
