--- a/app/public/css/sign_in_and_reg.css
+++ b/app/public/css/sign_in_and_reg.css
@@ -68,7 +68,7 @@ input:-webkit-autofill {
   border-radius: 10px;
   background-color: rgba(242,236,224,0.7);
   position: relative;
-  top: 219px;
+  top: 30%;
   left: 300%;
   box-shadow: 0px 0px 10px 2px #666;
   /* text-align: center; */
@@ -82,7 +82,7 @@ input:-webkit-autofill {
   border-radius: 10px;
   background-color: rgba(242,236,224,0.7);
   position: absolute;
-  top: 234px;
+  top: 15%;
   left: 300%;
   box-shadow: 0px 0px 10px 2px #666;
   padding: 10px 30px 30px 30px;
